# basemode-loom

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml
docs/: Agent Quickstart.md  Index.md  index.md
docs/basemode/: ContinuationStrategy.md  GenerationParams.md  basemode CLI Reference.md  basemode Installation.md  basemode Model Normalization.md  basemode Overview.md  basemode Python API.md  basemode Quickstart.md  basemode Strategies.md  branch_text.md  continue_text.md
docs/concepts/: How It Works.md  Tree Structure.md
docs/getting-started/: Installation.md  Quickstart.md
docs/reference/: Display.md  GenerationStore.md  LoomSession.md  Node.md
docs/usage/: CLI Reference.md  Configuration.md  Python API.md  TUI Guide.md  Web Server.md
src/basemode_loom/: __init__.py  cli.py  config.py  display.py  keymap.py  logging_utils.py  loom_formats.py  model_resolver.py  naming.py  session.py  stats.py  store.py
src/basemode_loom/api/: _rest.py  _serialize.py  _ws.py  app.py
src/basemode_loom/retrieval/: __init__.py  embedder.py  search.py  vectors.py
src/basemode_loom/tui/: app.py  app.tcss
src/basemode_loom/tui/screens/: config_review.py  confirm.py  info.py  int_input.py  loom.py  model_picker.py  prompt_screen.py  stats.py  (+1 more)
tests/: test_api_ws_params.py  test_cli.py  test_display.py  test_logging_utils.py  test_loom_formats.py  test_model_resolver.py  test_naming.py  test_picker_model.py  test_retrieval.py  test_session.py  test_stats.py  test_store.py  test_tree_picker.py  test_tui.py
(+5 files in other folders)
