[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basemode-loom"
version = "0.1.3"
description = "Persistent branching exploration for basemode continuations"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "basemode>=0.1.2",
    "fastapi>=0.115.0",
    "loguru>=0.7.2",
    "textual>=0.85.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
basemode-loom = "basemode_loom.cli:app"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "mkdocs-roamlinks-plugin>=0.3.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/basemode_loom"]

[tool.ruff]
line-length = 88
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["basemode_loom"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E741", "RUF059"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src/basemode_loom --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/basemode_loom"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
